see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

1-Feb-2010 Jean-Marie Simonet 
^ Refactored ini keys in content plugins + some

01-Feb-2010 Mark Dexter
# Fix menu settings in sample data (Elin Waring)

01-Feb-2010 Christophe Demko
^ Save the featured state in the article edit view
# Corrected a bug in installation joomla.sql file
# Corrected parse_ini_file for php version >= 5.3.0 (does not deal correctly with _QQ_ defined constant)

01-Feb-2010 Hannes Papenberg
# Fixed com_search router and model
# Fixed com_search view
# Fixed routing in content search plugins

1-Feb-2010 Jean-Marie Simonet 
^ Refactored com_plugins ini keys + some
^ Refactored (again ;) ) tinymce ini keys to standard


31-Jan-2010 Hannes Papenberg
# Fixed group bug in JParameter - Thanks James Kennard
- Removing unused images from administrator, including the /images folder
# Fixing routing of JHTML::image()
# Fixed notice in com_content router
+ Added $path_only option to JHTML::image()
# Fixed bug in how com_languages saves the configuration options - Thanks Jonnathan!
# When module were renamed, the translation files weren't renamed, too.
# Fixed frontend translation files for modules
# Fixed plugin translation files
# Fixed custom module handling in module manager
# Fixed entries in #__extensions. This fixes a few bugs like the selection list for new modules in the module manager

30-Jan-2010 Hannes Papenberg
# Fixed translation of parameter labels in com_users
+ Added ability to add a category.xml file to a component to add parameters to com_categories
+ Added mod_weblinks Weblink Module - Thanks Amy Stephen!
# Finished making images overrideable
