@@ -39,7 +39,7 @@ MODULES_FIELD_SHOWTITLE_DESC="Showtitle Desc"
 MODULES_FIELD_SHOWTITLE_LABEL="Show Title"
 MODULES_FIELD_TITLE_DESC="Title Desc"
 MODULES_FIELD_TITLE_LABEL="Title"
-MODULES_FIELD_CLIENT_ID_DESC="The type of the module, whether it is for the frontend or backend. You cannot change this value for the module."
+MODULES_FIELD_CLIENT_ID_DESC="The type of the module, whether it is for the front-end or back-end. You cannot change this value for the module."
 MODULES_FIELD_CLIENT_ID_LABEL="Type of Module"
 
 MODULE_FIELD_CACHING_DESC="Select whether to cache the content of this module"
@@ -51,4 +51,8 @@ MODULES_MENU_ASSIGNMENT="Menu Assignment"
 MODULES_MODULE_ASSIGN="Module Assignment"
 MODULES_MODULE_DESCRIPTION="Module Description"
 
+COM_MODULES_FIELD_PUBLISHED_LABEL="Published"
+COM_MODULES_FIELD_PUBLISHED_DESC="If published, this module will display on your site front-end or back-end depending on the module."
+COM_MODULES_FIELD_VALUE_PUBLISHED="Published"
+COM_MODULES_FIELD_VALUE_UNPUBLISHED="Unpublished"
 
