@@ -18,6 +18,8 @@ COM_PLUGINS_NAME_HEADING="Plug-in Name"
 
 COM_PLUGINS_XML_DESCRIPTION="Description"
 COM_PLUGINS_XML_ERR="Plugins XML data not available"
+COM_PLUGINS_FIELD_ENABLED_LABEL="Enabled"
+COM_PLUGINS_FIELD_ENABLED_DESC="The enabled state of this plugin"
 COM_PLUGINS_FIELD_NAME_DESC="Plug-in Name Desc"
 COM_PLUGINS_FIELD_NAME_LABEL="Plug-in Name"
 COM_PLUGINS_FIELD_ELEMENT_DESC="Field Element Desc"
